Fix test failures
Signed-off-by: Taylor Smock <tsmock@meta.com>